# pgcd

./: .directory  .gitignore  CONTRIBUTING.md  README.md  TODO.md
experiments/recovery_choice_01/: arm.rosl  arm.rosl.explicit  carrier.rosl  carrier.rosl.explicit  cart.rosl  cart.rosl.explicit  choice.choreo  crane.rosl  crane.rosl.explicit  franka.rosl  franka.rosl.explicit  params.yaml  xp.launch.py
experiments/recovery_choice_02/: arm.rosl  carrier.rosl  cart.rosl  choice.choreo  crane.rosl  franka.rosl  params.yaml  xp.launch.py
experiments/recovery_ferry_01/: carrier.rosl  carrier.rosl.explicit  crane.rosl  crane.rosl.explicit  ferry.choreo  franka.rosl  franka.rosl.explicit  params.yaml  xp.launch.py
experiments/recovery_ferry_02/: carrier.rosl  carrier.rosl.explicit  crane.rosl.explicit  ferry.choreo  franka.rosl  franka.rosl.explicit  params.yaml  xp.launch.py
experiments/recovery_test/: dummy.choreo  params.yaml  xp.launch.py
experiments/recovery_test_01/: dummy.choreo  dummy.rosl  params.yaml  xp.launch.py
experiments/recovery_test_02/: dummy.choreo  dummy1.rosl  dummy2.rosl
experiments/recovery_test_03/: dummy.choreo  dummy2.rosl  params.yaml  xp.launch.py
experiments/recovery_test_04/: dummy.choreo  dummy1.rosl  dummy2.rosl  params.yaml  xp.launch.py
experiments/recovery_test_05/: dummy.choreo  dummy1.rosl  dummy2.rosl  dummy3.rosl  params.yaml  xp.launch.py
experiments/sorting/: arm.rosl  (+7 more)
pgcd/: CMakeLists.txt  main.py  package.xml  simple_example.launch  start.launch
pgcd/launch/: cart_and_arm.launch  simple_example.launch  simple_example.launch.py  simple_example_params.yaml
pgcd/msg/: Compensation.msg  CompensationEntry.msg  CompensationStamped.msg  Done.msg  DoneStamped.msg  ErrorStamped.msg  GreenStamped.msg  MoveTo.msg  MoveToStamped.msg  OkStamped.msg  Point.msg  RedStamped.msg
pgcd/nodes/: component.py  tf_updater.py
pgcd/nodes/interpreter/: ast_inter.py  communication_utils.py  executor.py  interpreter.py  lexer.py  parser.py  recovery.py  status.py
pgcd/nodes/interpreter/grammar/: grammar.txt
pgcd/nodes/interpreter/test/: parselog.txt
pgcd/nodes/motions/: arm.py  arm_proxy.py  arm_remote.py  arm_shared.py  carrier.py  carrier_proxy.py  carrier_remote.py  carrier_shared.py  cart.py  cart_proxy.py  cart_remote.py  cart_shared.py  cartandarm.py  crane.py  drv8825.py  dummy_robot.py  franka.py  franka_proxy.py  franka_shared.py  proxy.py  proxy_conf.py  steppers.py
pgcd/nodes/programs/: carrier.rosl  cart.rosl  dummy_receiver.rosl  dummy_sender.rosl
pgcd/nodes/recovery/: motion_annot.py  partial_program.py  proj_to_code.py  rec.py  recovery_manager.py  run_tests.sh  synchronization.py
pgcd/nodes/recovery/test/: harness.py  partial_program_test.py  proj_to_code_test.py  recovery_test.py  synchronization_test.py
pgcd/nodes/verification/: modelchecker.py  run_tests.sh  spec.py  spin.py
pgcd/nodes/verification/choreography/: ast_chor.py  ast_proj.py  check_chor.py  compatibility.py  lexer_chor.py  minimal_sender.py  minimize.py  normalization.py  normalization_chor.py  parser_chor.py  projection.py  propagate_footprints.py  refinement.py  synchronizability.py  threads.py  vectorize.py
pgcd/nodes/verification/spec/: component.py  conf.py  contract.py  env.py  motion.py  time.py
pgcd/nodes/verification/test/: arm.py  arm_test.py  cart.py  compatibility_test.py  compute_threads_test.py  contract_parsing_test.py  contract_test.py  crane.py  experiments_setups.py  experiments_setups_2.py  fetch_setup.py  frameshift_test.py  franka.py  global_mc_test.py  handover_setup.py  minimal_sender_test.py  parser_test.py  point_process.py  pred_tracker_test.py  refinement_test.py  spin_test.py  static_process.py  static_process_test.py  synchronizability_test.py  twistNturn_setup.py  underpass_setup.py  xp_fetch_01_test.py  xp_fetch_02_test.py  xp_fetch_test.py  xp_handover_01_test.py  xp_handover_02_test.py  xp_handover_chain_paramtric.py  xp_handover_test.py  xp_lanes_parametric.py  xp_sorting_test.py  xp_stack_parametric.py  xp_twistNturn.py  xp_twistNturn_01_test.py  xp_twistNturn_02_test.py  xp_underpass_01_test.py  (+2 more)
pgcd/nodes/verification/utils/: DrealInterface.py  bbox.py  causality_tracker.py  cfa.py  fixed_point.py  geometry.py  predicate_tracker.py  transition.py  vc.py  vectorizer.py
rfccc/: CMakeLists.txt  main.py  package.xml  python3_main.py  start.launch
(+128 files in other folders)
