<?xml version="1.0"?>
<package format="3">
    <name>pgcd</name>
    <version>0.0.2</version>
    <description>The pgcd package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="gbbanusic@todo.todo">gbbanusic</maintainer>
    <author email="zufferey@mpi-sws.org">Damien Zufferey</author>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <url type="website">https://github.com/MPI-SWS/pgcd</url> 


    <!-- The depend tags are used to specify dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>builtin_interfaces</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>rclpy</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_py</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>common_msgs</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    	<build_type>ament_cmake</build_type>
    </export>
</package>
